--- a/index.html
+++ b/index.html
@@ -440,7 +440,7 @@
           </div>
         </section>
       </div>
-      <footer class="footer">作成者 #3275 きんにくん</footer>
+      <footer class="footer">#3275 きんにくん</footer>
     </div>
 
     <script>
