--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
         --font-family: "Noto Sans JP", sans-serif;
         --highlight-color: #e0f7ff;
       }
+      /* 修正: height: 100% を削除し、スクロールを自然に */
       html,
       body {
-        height: 100%;
         margin: 0;
         padding: 0;
         font-family: var(--font-family);
@@ -33,7 +33,8 @@
       }
       .container {
         max-width: 400px;
-        height: 100%;
+        /* 修正: heightをmin-height: 100vhに変更し、コンテンツが画面より大きい場合に対応 */
+        min-height: 100vh;
         margin: 0 auto;
         background-color: var(--surface-color);
         box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
@@ -42,24 +43,26 @@
       }
       .content-wrapper {
         flex-grow: 1;
+        /* 修正: overflow: hidden を削除し、スクロールを許可 */
         min-height: 0;
-        overflow: hidden;
         display: flex;
         flex-direction: column;
       }
       .page {
-        height: 100%;
+        /* 修正: height: 100%を削除し、flex-growで高さを自動調整 */
         padding: 15px;
         box-sizing: border-box;
         display: flex;
         flex-direction: column;
+        flex-grow: 1;
       }
       .page.hidden {
         display: none;
       }
       .calc-form {
         flex-shrink: 0;
-        overflow-y: auto;
+        /* 修正: 親要素でスクロールするため不要に */
+        /* overflow-y: auto; */
       }
       .page-title {
         text-align: center;
@@ -440,7 +443,7 @@
           </div>
         </section>
       </div>
-      <footer class="footer">#3275 きんにくん</footer>
+      <footer class="footer">作成者 #3275 きんにくん</footer>
     </div>
 
     <script>
